# org.webosports.app.settings

./: .gitignore  CMakeLists.txt  ChangeLog  README.md  appinfo.json  build-and-deploy.sh  debug.html  deploy.json  index.html  project.json  settingsapp.qmlproject
cmake/modules/: WebApp.cmake
data/: CMakeLists.txt  appinfo.about.json  appinfo.backup.json  appinfo.bluetooth.json  appinfo.certificate.json  appinfo.dateandtime.json  appinfo.deviceinfo.json  appinfo.devmodeswitcher.json  appinfo.exhibitionpreferences.json  appinfo.help.json  appinfo.json  appinfo.languagepicker.json  appinfo.location.json  appinfo.networksettings.json  appinfo.screenlock.json  appinfo.searchpreferences.json  appinfo.soundandalerts.json  appinfo.soundsandalerts.json  appinfo.textassist.json  appinfo.updates.json  appinfo.vpn.json  appinfo.wifi.json
enyo/tools/: deploy.js
files/sysbus/: org.webosports.app.settings.json.prv.in  org.webosports.app.settings.json.prv.in.in
lib/jmtk/: canvasSpinner.js  heartcode_canvas.js  package.js
lib/more-arrangers/source/: BoxTurnArranger.js  HFlipArranger.js  PageSpinArranger.js  PageTurnArranger.js  PushPopArranger.js  SladeArranger.js
lib/ports/source/: PortsSearch.js
lib/webos-lib/source/: FilePicker.js  ServiceRequest.js  webos.js
lib/webos-ports-lib/: README.md  README.md~
lib/webos-ports-lib/source/: BackGesture.js  CrossAppUI.js~  FilePicker.js~  PortsHeader.css  PortsSearch.js  package.js
plugin/: CMakeLists.txt  WiFiManager.js  extension-wifimanager-resources.qrc  settingsplugin.cpp  settingsplugin.h  wifimanager.cpp  wifimanager.h
source/: About.js  App.css  App.js  DateTime.js  DevMode.js  DevModeService.js  DevOptions.js  Exhibition.js  LanguageInput.js  Licenses.js  PushPopArranger.js  ScreenLock.js  Sound.js  SystemUpdates.css  SystemUpdates.js  Telephony.js  TimeZonePicker.js  WiFi.js  package.js  pickRingTones.js
source/style/: App.css
source/views/: About.js  Bluetooth.js  Certificates.js  DateTime.js  DevModeService.js  DevOptions.js  LanguageInput.js  Licenses.js  PINNumberPad.js  ScreenLock.js  SearchPreferences.js  Settings.js  Sound.js  SystemUpdates.css  SystemUpdates.js  Telephony.js  WiFi.js  package.js  pickRingTones.js
src/: CMakeLists.txt  config.h.in  main.cpp  settingsapplication.cpp  settingsapplication.h
src/qml/: AboutPage.qml  BasePage.qml  CategoryHeader.qml  GenericCategoryWindow.qml  MainPage.qml  PortsHeader.qml  main.qml
src/qml/Common/: BasePage.qml  HorizontalSeparator.qml  LabelAndValue.qml
src/qml/Connectivity/: BluetoothAuthorizeServicePopup.qml  BluetoothConfirmAuthorizePopup.qml  BluetoothConfirmPassKeyPopup.qml  BluetoothDisplayPassKeyPopup.qml  BluetoothDisplayPinCodePopup.qml  BluetoothPage.qml  BluetoothProvidePassKeyPopup.qml  BluetoothProvidePinCodePopup.qml  NetworkSettingsPage.qml  Ofono.qml  SimList.qml  VPNPage.qml  WiFiPage.qml  WiFiProvidePassphrasePopup.qml
src/qml/General/: AboutPage.qml  DeviceInfoPage.qml
src/qml/Testing/: ExamplePage.qml
